[tool.poetry]
name = "cosmic-invaders"
version = "0.1.0"
description = ""
authors = ["FoxCheeze <iagocarvalhodm@gmail.com>"]
readme = "README.md"
packages = [{include = "cosmic_invaders"}]

[tool.poetry.dependencies]
python = "^3.10"
glooey = "^0.3.6"
pyglet = "^2.0.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
